44) kernel: ralink_wifi: fix coexistence roaming and band steereing auth/probe reqests filter code.<br>
45) kernel: ralink_wifi: allow show band steering info with iwpriv.<br>
46) kernel: ralink_wifi: fix some errors founded by cppcheck.<br>
47) kernel: mips: cpu_name_string: Use raw_smp_processor_id().<br>
48) kernel: mips: upstream RIXI changes.<br>
49) kernel: mips: fix race condition in lazy cache flushing.<br>
50) kernel: mips: sync icache & dcache in set_pte_at.<br>
51) kernel: mips: c-r4k: sync icache when it fills from dcache.<br>
52) kernel: mips: revert: cache flush functions are reworked.<br>
53) kernel: mips: revert: fix bug in using flush_cache_vunmap.<br>
54) kernel: mips: module: fix incorrect IS_ERR_VALUE macro usages.<br>
55) kernel: mips: remove aliasing alignment if HW has antialising support.<br>
56) kernel: mips: avoid using unwind_stack() with usermode.<br>
57) kernel: mips: don't unwind to user mode with EVA.<br>
58) kernel: mips: make PCI_DMA_BUS_IS_PHYS=1 constant.<br>
59) kernel: usb: qmi_wwan: add D-Link DWM-221 B1 device id.<br>
60) kernel: usb: cdc_ncm: adding Telit LE910 V2 mobile broadband card.<br>
61) kernel: net: ipv4: l2tp: fix a potential issue in l2tp_ip_recv.<br>
62) kernel: net: sock: convert sk_peek_offset functions to WRITE_ONCE.<br>
63) kernel: net: bridge: fix incorrect variable assignment on error path in br_sysfs_addbr.<br>
64) kernel: net: wext: fix message delay/ordering.<br>
65) kernel: net: fix use after free in the recvmmsg exit path.<br>
66) kernel: net: force inlining of netif_tx_start/stop_queue, sock_hold, __sock_put.<br>
67) kernel: net: route: do not cache fib route info on local routes with oif.<br>
<br>
<br>
<b>4.3.x</b><br>
1) build_system: fix cleanup libext and optimize cleanup userdir.<br>
2) kernel: ralink_wifi: fix build warnings if build with -Wall flag.<br>
3) miniupnpd: up to 2.0 version.<br>
<br>
<br>
<br>